--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,6 +55,8 @@ jobs:
     - name: translate new
       run: pnpm install && node script/translate.js
       working-directory: /home/runner/work/n8n-i18n-chinese/n8n-i18n-chinese/n8n-i18n-chinese
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     - name: translate publish
       run: |
