--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    environment: test
     steps:
       - name: Checkout tag code
         uses: actions/checkout@v4
