--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -24,7 +24,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Extract version from release tag (e.g. n8n@1.102.4)
+      - name: Extract version from release tag
         id: extract_version
         run: |
           RAW_TAG=${GITHUB_REF##*/}
@@ -35,8 +35,10 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build \
-            --build-arg VERSION=${{ env.RELEASE_VERSION }} \
-            -t blowsnow/n8n-chinese:${{ env.RELEASE_VERSION }} \
+            --build-arg VERSION=${{ RELEASE_VERSION }} \
+            -t blowsnow/n8n-chinese:${{ RELEASE_VERSION }} \
             .
 
-          docker push blowsnow/n8n-chinese:${{ env.RELEASE_VERSION }}
+          docker push blowsnow/n8n-chinese:${{ RELEASE_VERSION }}
+        env:
+
